<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstrains">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:text="CALCULADORA DE ISR"
        android:textColor="#215FBD"
        android:textSize="35sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/portada"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo2"
        android:layout_below="@id/titulo"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contenedor"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/portada">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/parrafo"
            android:textColor="#215FBD"
            android:id="@+id/parrafo"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/isrdiario"
            android:text="@string/diario"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/isrsemanal"
            android:text="@string/semanal"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/isrdecenal"
            android:text="@string/decenal"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/isrquincenal"
            android:text="@string/quincenal"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/isrmensual"
            android:text="@string/mensual"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aceptar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/aceptar"
            android:textColor="#215FBD"
            style="?android:attr/buttonBarButtonStyle"/>

    </RadioGroup>
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>