<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6E1DB"
    tools:context=".ISR_Diario">

    <RelativeLayout
        android:layout_width="408dp"
        android:layout_height="712dp"
        tools:ignore="MissingConstrains,MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="ISR DIARIO 2021"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingresos1"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_below="@+id/titulo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:text="@string/ingresos"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingresos"
            android:layout_width="317dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:background="#878080"
            android:hint="Ingrese Sueldo Total para obtener ISR"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="#99C0C5"
            android:text="@string/Calcular"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/resultados"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calcular"
            android:layout_centerHorizontal="true"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/limite"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultados"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/limiteInf"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/limiteinf"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/limite"
            android:layout_alignLeft="@+id/limite"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-69dp"
            android:layout_marginTop="7dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/base"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/limiteinf"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/base"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/baser"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/base"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-59dp"
            android:layout_marginTop="3dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tasa"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/baser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/tasa"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tasar"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/tasa"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-59dp"
            android:layout_marginTop="3dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/impuestomar"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tasar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/impuestom"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/impuestomarr"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/impuestomar"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-59dp"
            android:layout_marginTop="3dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cuotaFija"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/impuestomarr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/cuotaFi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cuotaFijaa"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/cuotaFija"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-59dp"
            android:layout_marginTop="3dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/impuestoRetener"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cuotaFijaa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/impuestorete"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/impuestoRetenerr"
            android:layout_width="277dp"
            android:layout_height="30dp"
            android:layout_below="@+id/impuestoRetener"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="-59dp"
            android:layout_marginTop="3dp"
            android:background="#878080"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>